--- a/Bot/config/db_config.json
+++ b/Bot/config/db_config.json
@@ -3,11 +3,11 @@
     "project_id": "ig-bot-10953",
     "private_key_id": "use yours",
     "private_key": " use yours"
-    "client_email": "firebase-adminsdk-bbvkp@ig-bot-10953.iam.gserviceaccount.com",
-    "client_id": "111593783041150516338",
+    "client_email": "create yours",
+    "client_id": "create yours",
     "auth_uri": "https://accounts.google.com/o/oauth2/auth",
     "token_uri": "https://oauth2.googleapis.com/token",
     "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-    "client_x509_cert_url": "https://www.googleapis.com/robot/v1/metadata/x509/firebase-adminsdk-bbvkp%40ig-bot-10953.iam.gserviceaccount.com"
+    "client_x509_cert_url": "create yours"
   }
   
